<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Photo Tagger</string>
    <string name="add_category">Add category</string>
    <string name="name_label">Name</string>
    <string name="save_button">Save</string>
    <string name="add_tag">Add tag</string>
    <string name="category_label">Category</string>
    <string name="people">People</string>
    <string name="tags">Tags</string>
    <string name="printing">Printing</string>
    <string name="keywords">Keywords</string>
    <string name="photos">Photos</string>
    <string name="locations">Locations</string>
    <string name="add_country">Add Country</string>
    <string name="add_area">Add Area</string>
    <string name="country_label">Country</string>
    <string name="add_location">Add Location</string>
    <string name="location">Location</string>
    <string name="set_location">Set Location</string>
    <string name="add_people">Add People</string>
    <string name="add_keywords">Add Keywords</string>
    <string name="set_printing">Set Printing</string>
    <string name="apply_button">Apply Location</string>
    <string name="near_button">Near</string>
    <string name="backup">Backup</string>
    <string name="save_and_apply">Save and Apply</string>
    <string name="notes">Notes</string>
    <string name="add_notes">Add notes</string>
    <string name="view">view</string>
    <string name="gallery">Gallery</string>
    <string name="folder">Folder</string>
    <string name="apply_tags">Apply Tags</string>
    <string name="show_photos">Show Photos</string>
</resources>
