<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="26px"
            android:text="@string/app_name"
            android:paddingBottom="5px"/>

    <ImageView
            android:id="@+id/photo"
            android:layout_width="fill_parent"
            android:layout_height="220dp"
            android:adjustViewBounds="true"
            android:paddingLeft="3sp"
            android:paddingRight="3sp"
            android:paddingTop="3sp"
            android:layout_below="@id/header"
            android:paddingBottom="5px"/>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

        <Button
                android:id="@+id/tag_photos_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/photos"/>

        <Button
                android:id="@+id/manage_tags_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_toRightOf="@id/tag_photos_button"
                android:text="@string/tags"/>
        <Button
                android:id="@+id/manage_locations_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_toRightOf="@id/manage_tags_button"
                android:text="@string/locations"/>
        <Button
                android:id="@+id/backup_database_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_toRightOf="@id/manage_locations_button"
                android:text="@string/backup"/>

        <Button
                android:id="@+id/gallery_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_below="@id/tag_photos_button"
                android:text="@string/gallery"/>

    </RelativeLayout>

</LinearLayout>