<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

    <TextView
            android:id="@+id/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:width="100px"
            android:textSize="18px"
            android:text="@string/name_label"/>

    <EditText
            android:id="@+id/name_textfield"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_label"/>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/map"
              android:layout_below="@id/name_textfield"
              android:layout_width="fill_parent"
              android:layout_height="340px"
              android:clickable="true"
              android:padding="10dp"
              android:name="com.google.android.gms.maps.SupportMapFragment"/>

    <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/save_button"
            android:layout_below="@id/map"
            android:visibility="invisible"/>

    <Button
            android:id="@+id/apply_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/apply_button"
            android:layout_below="@id/map"
            android:visibility="invisible"/>

    <Button
            android:id="@+id/near_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/near_button"
            android:layout_below="@id/map"
            android:layout_toRightOf="@id/apply_button"
            android:visibility="invisible"/>

</RelativeLayout>