<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

    <TextView
            android:id="@+id/photo_file_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="2sp"
            android:paddingLeft="3sp"
            android:textSize="11dp" />

    <ImageView
            android:id="@+id/photo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:padding="3sp"
            android:layout_below="@id/photo_file_name"/>

    <TextView
            android:id="@+id/people"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="3sp"
            android:textSize="14dp"
            android:text="@string/people"
            android:layout_below="@id/photo"/>

    <TextView
            android:id="@+id/people_tags_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="3sp"
            android:textSize="11dp"
            android:layout_below="@id/people"/>

    <Button
            android:id="@+id/people_tags_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_below="@id/people_tags_text"
            android:layout_alignParentRight="true"
            android:text="@string/people"/>

    <TextView
            android:id="@+id/keywords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="3sp"
            android:textSize="14dp"
            android:text="@string/keywords"
            android:layout_below="@id/people_tags_button"/>

    <TextView
            android:id="@+id/keyword_tags_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="3sp"
            android:textSize="11dp"
            android:layout_below="@id/keywords"/>

    <Button
            android:id="@+id/keyword_tags_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_below="@id/keyword_tags_text"
            android:layout_alignParentRight="true"
            android:text="@string/keywords"/>
    
    
    <TextView
            android:id="@+id/printing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="3sp"
            android:textSize="14dp"
            android:text="@string/printing"
            android:layout_below="@id/keyword_tags_button"/>

    <TextView
            android:id="@+id/printing_tags_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="3sp"
            android:textSize="11dp"
            android:layout_below="@id/printing"/>

    <Button
            android:id="@+id/printing_tags_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_below="@id/printing_tags_text"
            android:layout_alignParentRight="true"
            android:text="@string/printing"/>


</RelativeLayout>